# orthanc-education

./: .hgignore  AUTHORS  CMakeLists.txt  NEWS  README  TODO
.reuse/: dep5
Resources/: SyncOrthancFolder.py
Resources/CMake/: JavaScriptLibraries.cmake  Reproc.cmake  Reproc.patch
Resources/IntegrationTests/: Run.py  config.json
Sources/: EducationConfiguration.cpp  EducationConfiguration.h  EducationEnumerations.cpp  EducationEnumerations.h  EducationRestApi.cpp  EducationRestApi.h  HttpToolbox.cpp  HttpToolbox.h  OrthancDatabase.cpp  OrthancDatabase.h  Plugin.cpp  ProjectPermissionContext.cpp  ProjectPermissionContext.h  RestApiRouter.cpp  RestApiRouter.h
Sources/Dicomization/: ActiveUploads.cpp  ActiveUploads.h  DicomizationJob.cpp  DicomizationJob.h  IDicomizer.h  ProcessRunner.cpp  ProcessRunner.h  SharedLogs.cpp  SharedLogs.h  TemporaryDirectory.cpp  TemporaryDirectory.h  WholeSlideImagingDicomizer.cpp  WholeSlideImagingDicomizer.h
Sources/LTI/: LTIContext.cpp  LTIContext.h  LTIRoutes.cpp  LTIRoutes.h
Sources/Models/: DocumentOrientedDatabase.cpp  DocumentOrientedDatabase.h  IDocumentUnserializer.h  ISerializableDocument.h  Project.cpp  Project.h
Sources/Permissions/: AuthenticatedUser.cpp  AuthenticatedUser.h  IPermissionContext.h
Sources/Security/: IJWTForge.h  JWT.cpp  JWT.h  OpenSSLSerializationContext.cpp  OpenSSLSerializationContext.h  PlatformKeysRegistry.cpp  PlatformKeysRegistry.h  PointerRAII.h  RSAPrivateKey.cpp  RSAPrivateKey.h  RSAPublicKey.cpp  RSAPublicKey.h  SecurityConstants.h
WebApplication/: dashboard.html  dashboard.js  deep.html  deep.js  list-projects.html  list-projects.js  login.html  login.js  toolbox.js
